reviewed obu protocol